# dum-dum-irc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pynsist.cfg  pyproject.toml
.github/workflows/: black-lint.yml  pyright-lint.yml  python-publish.yml  python-test.yml
src/dumdum/: appdirs.py  highcommand.py  logging.py  server.py  server_state.py
src/dumdum/client/: __main__.py  app.py  async_client.py  chat_frame.py  connect_frame.py  errors.py  event_thread.py  file_entry.py  scrollable_frame.py  store.py  styling.py
src/dumdum/db/: __init__.py  connection.py  migrations.py
src/dumdum/db/scripts/client/: 0001-base.sql
src/dumdum/protocol/: README.md  __init__.py  buffer.py  channel.py  constants.py  enums.py  errors.py  highcommand.py  interfaces.py  message.py  reader.py  snowflake.py  varchar.py
src/dumdum/protocol/client/: __init__.py  events.py  messages.py  protocol.py
src/dumdum/protocol/server/: __init__.py  events.py  messages.py  protocol.py
src/dumdum/server/: __init__.py  __main__.py  connection.py  manager.py  state.py
tests/: test_protocol.py  test_reader.py  test_varchar.py
