[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dum-dum"
description = "A non-standard internet relay chat program."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = []
dynamic = ["version"]
dependencies = [
    "importlib-resources>=6.1.3",
    "platformdirs>=4.2.0",
]

[project.scripts]
dumdum = "dumdum.client.__main__:main"
dumdum-server = "dumdum.server:main"

[project.optional-dependencies]
tests = [
    "pytest>=8.0.2",
]

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/dum-dum-irc"
"Issue Tracker" = "https://github.com/thegamecracks/dum-dum-irc/issues"
