[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dum-dum"
description = "A non-standard internet relay chat program."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = []
dynamic = ["version"]
dependencies = [
    "importlib-resources>=6.1.3",
    "platformdirs>=4.2.0",
]

[project.scripts]
dumdum = "dumdum.client.__main__:main"
dumdum-server = "dumdum.server.__main__:main"

[project.optional-dependencies]
tests = [
    "coverage>=7.4.3",
    "pytest>=8.0.2",
]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/dum-dum-irc"
"Issue Tracker" = "https://github.com/thegamecracks/dum-dum-irc/issues"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
    "\\s*\\.\\.\\.$",
    "raise NotImplementedError",
    "def __repr__",
]

[tool.coverage.run]
branch = true
source_pkgs = ["dumdum"]
omit = ["src/dumdum/client/*", "src/dumdum/server.py"]

[tool.setuptools_scm]
